fix all logo and center the mobile version also fix the notif no animated logo on mobile

--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -98,20 +98,17 @@
     margin-left: -31px !important;
     margin-top: -24px; */
   height: 48px;
-
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .anim-gif-mobile {
     height: 48px;
-  
   }
 }
 
 @media (max-width: 767.98px) {
   .anim-gif-mobile {
     height: 48px;
-
   }
 }
 
@@ -294,6 +291,7 @@ a.click-to-top:hover span {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin-left: 0.15vh;
 }
 
 .itemnotification {
@@ -864,7 +862,6 @@ ul .notif_drop_main {
   font-size: 22px;
   color: white;
   text-align: center;
- 
 }
 
 .notifBody {
@@ -1568,7 +1565,6 @@ bottom: 77.54% ; */
   padding-top: 56px;
 }
 
-
 .sidebarMoreMobileHeight {
   display: flex;
   // flex-direction: column;
@@ -1909,6 +1905,7 @@ bottom: 77.54% ; */
 }
 
 .position_icon_notif_mobile {
+  padding-top: 2.7%;
   position: absolute;
   /* right: 24px;*/
   top: 8px;
